2009-09-30 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* HtmlSelectBuilder.cs: <option> allows the value of the 'selected'
	attribute to be a boolean or the string "selected", which is treated
	as "true".

2009-06-16  Marek Habersack  <mhabersack@novell.com>

	* HtmlHeadBuilder.cs: use faster String.Compare overloads.

	* HtmlHead.cs: implemented 4.0 properties Description and
	Keywords.

2009-06-11 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* HtmlTitle.cs: HtmlTitle allows children that are not
	LiteralControls. Fixes bug #511882.

2009-05-15  Marek Habersack  <mhabersack@novell.com>

	* HtmlForm.cs: if application isn't running on /, make sure we
	generate the correct relative path for the action form attribute.

2009-04-15 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* HtmlInputText.cs: make sure we're inside a Page before dereferencing
	it.

2008-11-06  Marek Habersack  <mhabersack@novell.com>

	* HtmlForm.cs: added the undocumented, but supported, Action
	attribute. Fixes bug #442104

2008-10-17  Marek Habersack  <mhabersack@novell.com>

	* HtmlInputHidden.cs: validate the event in LoadPostDataInternal.

	* HtmlInputButton.cs: validate the event in
	RaisePostBackEventInternal ().
	Register for event validation in RenderAttributes ()

	* HtmlTextArea.cs: validate the event in
	RaisePostBackDataChangedEvent ().

	* HtmlButton.cs: validate the event in RaisePostBackEvent ().
	Register for event validation in RenderAttributes ()

	* HtmlAnchor.cs: validate the event in RaisePostBackEvent ().
	Register for event validation in RenderAttributes ().

	* HtmlInputRadioButton.cs, HtmlSelect.cs: validate the event in
	LoadPostData.

	* HtmlInputText.cs, HtmlInputImage.cs, HtmlInputCheckBox.cs,
	HtmlInputPassword.cs: validate the event in
	RaisePostDataChangedEvent ().

2008-10-07  Christian Hergert  <christian.hergert@gmail.com>

	* HtmlImage.cs: Do not render the src attribute if it is null or empty.