@@ -1,3 +1,9 @@
+2009-10-30  Marek Habersack  <mhabersack@novell.com>
+
+	* Control.cs: ResolveClientUrl takes base path from
+	Request.ClientFilePath, so that it works correctly for rewritten
+	urls.
+
 2009-10-27  Marek Habersack  <mhabersack@novell.com>
 
 	* ObjectStateFormatter.cs: do not use a type converter to
