@@ -1,3 +1,9 @@
+2009-10-30  Marek Habersack  <mhabersack@novell.com>
+
+	* HtmlForm.cs: action is built using Request.ClientFilePath
+	(instead of Request.FilePath) and ResolveClientUrl, so that it's
+	correct even if url rewriting is being used.
+
 2009-09-30 Gonzalo Paniagua Javier <gonzalo@novell.com>
 
 	* HtmlSelectBuilder.cs: <option> allows the value of the 'selected'
